--- a/.github/workflows/confluence-sync.yml
+++ b/.github/workflows/confluence-sync.yml
@@ -5,10 +5,6 @@ on:
   push:
     paths:
       - '**.md'
-      - '!README.md'
-      - '!docs/docs-missing.md'
-      - '!docs/other/click-icons.md'
-      - '!docs/documentation.md'
     branches:
       - master
 
@@ -22,4 +18,8 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Sync to Confluence
-        run: mark -k --drop-h1 -f '**.md' -b https://click-dealer.atlassian.net/wiki -u ${{ secrets.MARK_USERNAME }} -p ${{ secrets.MARK_PASSWORD }}
+        run: for file in $(find -type f -name '*.md'); do
+              echo "> Sync $file";
+              mark -k --drop-h1 -b https://click-dealer.atlassian.net/wiki -u ${{ secrets.MARK_USERNAME }} -p ${{ secrets.MARK_PASSWORD }} -f $file || exit 1;
+              echo;
+            done
